--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,125 @@
-.App {
+* {
+  box-sizing: border-box;
+}
+
+/* Style the body */
+body {
+  font-family: Arial;
+  margin: 0;
+}
+
+/* Header/logo Title */
+.header {
+  padding: 60px;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background: #171515;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+/* Style the top navigation bar */
+.navbar {
+  display: flex;
+  background-color: #333;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/* Style the navigation bar links */
+.navbar a {
+  color: white;
+  padding: 14px 20px;
+  text-decoration: none;
+  text-align: center;
+}
+
+/* Change color on hover */
+.navbar a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+input[type="text"] {
+  display: block;
+  width: 60%;
+  margin: auto;
+  padding: 7px;
+  border: 1px solid #ccc;
+  font-size: x-large;
+}
+
+button {
+  width: 10%;
+  margin: auto;
+  padding: 7px;
+  cursor: pointer;
+}
+
+/* Column container */
+.row {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+/* Create two unequal columns that sits next to each other */
+/* Sidebar/left column */
+.side {
+  flex: 30%;
+  background-color: #f1f1f1;
+  padding: 20px;
+}
+
+/* Main column */
+.main {
+  flex: 70%;
+  background-color: white;
+  padding: 20px;
+}
+
+/* Fake image, just for this example */
+.fakeimg {
+  background-color: #aaa;
+  width: 100%;
+  padding: 20px;
+}
+
+/* Footer */
+.footer {
+  padding: 20px;
+  text-align: center;
+  background: #ddd;
+}
+
+.navbar a {
+  color: white;
+  padding: 22px;
+  text-decoration: none;
+  text-align: center;
+}
+
+.navbar i,
+p {
+  text-align: center;
+  color: white;
+  padding: 8px;
+}
+
+/* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 700px) {
+  .row,
+  .navbar {
+    flex-direction: column;
   }
-  to {
-    transform: rotate(360deg);
+
+  input[type="text"] {
+    width: 90%;
+    font-size: large;
+  }
+  button {
+    width: 30%;
+  }
+  .navbar a {
+    padding: 10px;
+  }
+  .navbar i,
+  p {
+    padding: 5px;
   }
 }
